--- a/areas.ipynb
+++ b/areas.ipynb
@@ -2,14 +2,14 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "E:\\codes\\NetworkRecoverySim\n"
+      "E:\\GithubRep\\JAAMAS\\SyncMa\\BigNetwork25Exp\n"
      ]
     }
    ],
@@ -22,23 +22,18 @@
     "import os\n",
     "print(os.getcwd())\n",
     "\n",
-    "def getAreas(filename, rounds=1000):\n",
+    "def getAreas(filename):\n",
     "    with open(filename) as csv_file:\n",
     "        csv_reader = csv.reader(csv_file, delimiter=',')\n",
     "        line_count = 0\n",
     "        minArr = []\n",
     "        medArr = []\n",
     "        maxArr = []\n",
-    "        \n",
     "        for row in csv_reader:\n",
-    "            if line_count > rounds:\n",
-    "                break\n",
     "            minArr.append(float(row[0]))\n",
     "            medArr.append(float(row[1]))\n",
     "            maxArr.append(float(row[2]))\n",
-    "            line_count += 1\n",
-    "            \n",
-    "            \n",
+    "\n",
     "        maxA = np.array(maxArr)\n",
     "\n",
     "        # Compute the area using the composite trapezoidal rule.\n",
@@ -72,120 +67,54 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Max area = 2518870162.5\n",
-      "Max area = 2519613495.0\n",
-      "Max area = 2518870162.5\n",
-      "Max area = 2519613495.0\n",
-      "Min area = 2518870162.5\n",
-      "Min area = 2519613495.0\n"
+      "Max area = 153822.5\n",
+      "Max area = 153963.75\n",
+      "Max area = 125263.75\n",
+      "Max area = 125360.83333333333\n",
+      "Min area = 101862.5\n",
+      "Min area = 101895.41666666666\n"
      ]
     }
    ],
    "source": [
-    "getAreas(\"exp+ps+0+pf+0.0+mode+carriersrep+maxIter+50+e+1273+v+512+load+replalgoff+NODELAY+trickle+redFactor+3+localstatsrecvlocalSizeMsgRecv.csv\")"
+    "getAreas(\"exp+ps+0+pf+0.0+mode+carriersrep+maxIter+50+e+1273+v+512+load+replalgoff+NODELAY+trickle+redFactor+3+localstatsrecvlocalNumberMsgRecv.csv\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Max area = 702220660.0\n",
-      "Max area = 702226464.1666667\n",
-      "Max area = 702220660.0\n",
-      "Max area = 702226464.1666667\n",
-      "Min area = 702220660.0\n",
-      "Min area = 702226464.1666667\n"
+      "Max area = 148130.0\n",
+      "Max area = 148076.25\n",
+      "Max area = 123080.0\n",
+      "Max area = 123055.0\n",
+      "Min area = 102947.5\n",
+      "Min area = 102931.25000000001\n"
      ]
     }
    ],
    "source": [
-    "getAreas(\"exp+ps+256+pf+0.0+mode+FirstNeighbor+maxIter+50+e+1273+v+512+load+replalgoff+NODELAY+mobileAgents+redFactor+3+localstatsrecvlocalSizeMsgRecv.csv\")"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "    Messages Sent No Failure"
+    "getAreas(\"exp+ps+0+pf+0.0+mode+carriersrep+maxIter+50+e+1273+v+512+load+replalgoff+NODELAY+trickle+redFactor+3+localstatssentlocalNumberMsgSent.csv\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "FileNotFoundError",
-     "evalue": "[Errno 2] No such file or directory: 'exp+ps+128+pf+0.0+mode+FirstNeighbor+maxIter+50+e+1273+v+512+load+replalgoff+NODELAY+mobileAgents+redFactor+3+localstatsrecvlocalSizeMsgRecv.csv'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mFileNotFoundError\u001b[0m                         Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-45-bf01c06d83cc>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mgetAreas\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m\"exp+ps+128+pf+0.0+mode+FirstNeighbor+maxIter+50+e+1273+v+512+load+replalgoff+NODELAY+mobileAgents+redFactor+3+localstatsrecvlocalSizeMsgRecv.csv\"\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[1;32m<ipython-input-30-584faee49118>\u001b[0m in \u001b[0;36mgetAreas\u001b[1;34m(filename, rounds)\u001b[0m\n\u001b[0;32m      8\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      9\u001b[0m \u001b[1;32mdef\u001b[0m \u001b[0mgetAreas\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mfilename\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mrounds\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;36m1000\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 10\u001b[1;33m     \u001b[1;32mwith\u001b[0m \u001b[0mopen\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mfilename\u001b[0m\u001b[1;33m)\u001b[0m \u001b[1;32mas\u001b[0m \u001b[0mcsv_file\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     11\u001b[0m         \u001b[0mcsv_reader\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mcsv\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mreader\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mcsv_file\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mdelimiter\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;34m','\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     12\u001b[0m         \u001b[0mline_count\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;36m0\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mFileNotFoundError\u001b[0m: [Errno 2] No such file or directory: 'exp+ps+128+pf+0.0+mode+FirstNeighbor+maxIter+50+e+1273+v+512+load+replalgoff+NODELAY+mobileAgents+redFactor+3+localstatsrecvlocalSizeMsgRecv.csv'"
-     ]
-    }
-   ],
-   "source": [
-    "getAreas(\"exp+ps+128+pf+0.0+mode+FirstNeighbor+maxIter+50+e+1273+v+512+load+replalgoff+NODELAY+mobileAgents+redFactor+3+localstatsrecvlocalSizeMsgRecv.csv\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 46,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Max area = 2427464200.0\n",
-      "Max area = 2428860575.833334\n",
-      "Max area = 2427464200.0\n",
-      "Max area = 2428860575.833334\n",
-      "Min area = 2427464200.0\n",
-      "Min area = 2428860575.833334\n"
-     ]
-    }
-   ],
-   "source": [
-    "getAreas(\"exp+ps+0+pf+0.0+mode+carriersrep+maxIter+50+e+1273+v+512+load+replalgoff+NODELAY+trickle+redFactor+3+localstatsrecvlocalSizeMsgRecv.csv\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 15,
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "FileNotFoundError",
-     "evalue": "[Errno 2] No such file or directory: 'exp+ps+0+pf+0.0+mode+carriersrep+maxIter+50+e+200+v+100+smallworld+v+100+beta+0.5+degree+2+replalgoff+NODELAY+trickle+redFactor+5+localstatssentlocalNumberMsgSent.csv'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mFileNotFoundError\u001b[0m                         Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-15-b7b3f8de7e88>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mgetAreas\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m\"exp+ps+0+pf+0.0+mode+carriersrep+maxIter+50+e+200+v+100+smallworld+v+100+beta+0.5+degree+2+replalgoff+NODELAY+trickle+redFactor+5+localstatssentlocalNumberMsgSent.csv\"\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[1;32m<ipython-input-1-4345d81f7d60>\u001b[0m in \u001b[0;36mgetAreas\u001b[1;34m(filename)\u001b[0m\n\u001b[0;32m      8\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      9\u001b[0m \u001b[1;32mdef\u001b[0m \u001b[0mgetAreas\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mfilename\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 10\u001b[1;33m     \u001b[1;32mwith\u001b[0m \u001b[0mopen\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mfilename\u001b[0m\u001b[1;33m)\u001b[0m \u001b[1;32mas\u001b[0m \u001b[0mcsv_file\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     11\u001b[0m         \u001b[0mcsv_reader\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mcsv\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mreader\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mcsv_file\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mdelimiter\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;34m','\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     12\u001b[0m         \u001b[0mline_count\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;36m0\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mFileNotFoundError\u001b[0m: [Errno 2] No such file or directory: 'exp+ps+0+pf+0.0+mode+carriersrep+maxIter+50+e+200+v+100+smallworld+v+100+beta+0.5+degree+2+replalgoff+NODELAY+trickle+redFactor+5+localstatssentlocalNumberMsgSent.csv'"
-     ]
-    }
-   ],
-   "source": [
-    "getAreas(\"exp+ps+0+pf+0.0+mode+carriersrep+maxIter+50+e+200+v+100+smallworld+v+100+beta+0.5+degree+2+replalgoff+NODELAY+trickle+redFactor+5+localstatssentlocalNumberMsgSent.csv\")"
-   ]
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
